# spice-subckt-rc-reduce

./: CLAUDE.md  README.md  main.py  pyproject.toml
rcreduce/: graph.py  merge.py  parser.py  ticer.py  value.py
testdata/: large_mesh.subckt  passthrough.subckt  rc_pi.subckt  rc_star.subckt  simple_rc_chain.subckt
tests/: test_graph.py  test_integration.py  test_merge.py  test_parser.py  test_ticer.py  test_value.py
