[project]
name = "spice-subckt-rc-reduce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
spice_subckt_rc_reduce = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rcreduce", "main.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]

